[gd_scene load_steps=10 format=2]

[ext_resource path="res://Texturs/6COP.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pause_mode.gd" type="Script" id=2]
[ext_resource path="res://Texturs/2f4c1b7da5a00943.png" type="Texture" id=3]
[ext_resource path="res://Texturs/03e95fbab00a9b38.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 272, 192, 240, 112 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 224, 384, 352, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 592, 320, 80 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 304, 688, 192, 80 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 16, 16 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -464.0
margin_top = -484.0
margin_right = 336.0
margin_bottom = 492.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Popup/TextureRect"]
anchor_left = 0.32
anchor_top = 0.213115
anchor_right = 0.62
anchor_bottom = 0.327869
margin_right = 3.05176e-05
texture = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -540.0
margin_right = 108.0
margin_bottom = 540.0
focus_mode = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Popup/VBoxContainer"]
pause_mode = 2
margin_top = 432.0
margin_right = 364.0
margin_bottom = 534.0
focus_neighbour_top = NodePath("../Exit")
size_flags_vertical = 0
icon = SubResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Popup/VBoxContainer"]
pause_mode = 2
margin_top = 538.0
margin_right = 364.0
margin_bottom = 558.0
icon = SubResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Popup/VBoxContainer"]
pause_mode = 2
margin_left = 60.0
margin_top = 600.0
margin_right = 250.0
margin_bottom = 648.0
focus_neighbour_bottom = NodePath("../Resume")
icon = SubResource( 6 )
flat = true

[node name="Pause" type="Button" parent="."]
pause_mode = 2
anchor_left = 0.945
anchor_top = 0.018
anchor_right = 0.984
anchor_bottom = 0.071
margin_left = 0.320007
margin_top = -7.97151
margin_right = 6.38409
margin_bottom = 0.228489
icon = SubResource( 2 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Popup/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Popup/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Popup/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="button_down" from="Pause" to="." method="_on_Pause_button_down"]
[connection signal="mouse_entered" from="Pause" to="." method="_on_Pause_mouse_entered"]
[connection signal="mouse_exited" from="Pause" to="." method="_on_Pause_mouse_exited"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
